<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_sort_type"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_sort_due_date"
            android:title="@string/sort_by_due_date" />
        <item
            android:id="@+id/action_sort_priority"
            android:title="@string/sort_by_priority" />
        <item
            android:id="@+id/action_sort_created_date"
            android:title="@string/sort_by_created_date" />
        <item
            android:id="@+id/action_sort_title"
            android:title="@string/sort_by_title" />
    </group>
    <group
        android:id="@+id/group_sort_order"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_sort_ascending"
            android:title="@string/sort_ascending" />
        <item
            android:id="@+id/action_sort_descending"
            android:title="@string/sort_descending" />
    </group>
</menu>
